--- a/index.html
+++ b/index.html
@@ -12,23 +12,49 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Interactive card details form</title>
   </head>
   <body>
-    <div class="background-section"></div>
+    <img
+      src="./images/bg-main-desktop.png"
+      alt="Background image that is behind elements and multicolored"
+      class="background-section"
+    />
     <div class="container">
       <section class="card-section">
         <div class="card-front">
-          0000 0000 0000 0000 Jane Appleseed 00/00 000
+          <img
+            src="./images/bg-card-front.png"
+            alt="Front of card that is multicolored"
+            class="card-front-image"
+          />
+          <img src="./images/card-logo.svg" alt="" class="card-front-logo" />
+          <p class="card-front-digits">0000 0000 0000 0000</p>
+          <p class="card-front-name">JANE APPLESEED</p>
+          <p class="card-front-date">00/00</p>
         </div>
-        <div class="card-back">000</div>
+        <div class="card-back">
+          <img
+            src="./images/bg-card-back.png"
+            alt="Back of card showing 3 digit code"
+            class="card-back-image"
+          />
+          <p class="card-back-num">000</p>
+        </div>
       </section>
 
       <section class="form-section">
         <form action="" method="get">
-          <label for="card-name">Cardholder Name</label>
+          <label for="card-name">CARDHOLDER NAME</label>
           <input
             type="text"
             name="card-name"
@@ -36,7 +62,7 @@
             placeholder="e.g. Jane Appleseed"
             required
           />
-          <label for="card-number">Card Number</label>
+          <label for="card-number">CARD NUMBER</label>
           <input
             type="text"
             name="card-number"
@@ -44,7 +70,7 @@
             placeholder="e.g. 1234 5678 9123 0000"
             required
           />
-          <label for="card-exp-date">Exp. Date (MM/YY)</label>
+          <label for="card-exp-date">EXP. DATE (MM/YY)</label>
           <div>
             <input
               type="number"
