Created script.js file and started adding functionality from form when input fields are filled out

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
 
       <section class="form-section">
-        <form action="" method="get">
+        <form id="form-information" action="index.html" method="post">
           <div class="card-name-container">
             <label class="card-name-label" for="card-name"
               >CARDHOLDER NAME</label
@@ -71,7 +71,7 @@
               >CARD NUMBER</label
             >
             <input
-              type="text"
+              type="number"
               name="card-number"
               id="card-number"
               placeholder="e.g. 1234 5678 9123 0000"
@@ -89,6 +89,8 @@
                   name="card-exp-date"
                   id="card-exp-date"
                   placeholder="MM"
+                  min="1"
+                  max="12"
                   required
                 />
                 <input
@@ -96,6 +98,8 @@
                   name="card-exp-date"
                   id="card-exp-date"
                   placeholder="YY"
+                  min="20"
+                  max="50"
                   required
                 />
               </div>
@@ -107,11 +111,13 @@
                 name="card-cvc"
                 id="card-cvc"
                 placeholder="e.g. 123"
+                min="100"
+                max="999"
                 required
               />
             </div>
           </div>
-          <button>Confirm</button>
+          <button type="submit">Confirm</button>
         </form>
       </section>
     </div>
@@ -125,5 +131,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
