Fixed spacing between card number digits at the end and only allowed 16 digits for the card. Fixed card month to add 0 in front of single digit months

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="form-exp-date-container">
               <label
                 class="card-exp-date-label"
-                for="card-exp-date-month card-exp-date-year"
+                for="card-exp-date-month"
                 >EXP. DATE (MM/YY)</label
               >
               <div class="form-bottom-container">
@@ -109,7 +109,7 @@
                     id="card-exp-date-year"
                     placeholder="YY"
                     min="20"
-                    max="50"
+                    max="35"
                   />
                   <div class="error-message" id="card-date-error-year">
                     Must enter year
