Completed styles.css, converted to mobile-first design rather than desktop-first. Layout optimized for mobile and desktop use from styles.css. Fixed null error when typing in inputs in script.js. Refactored and completed README.md to explain project information

--- a/index.html
+++ b/index.html
@@ -2,66 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- displays site properly based on user's device -->
 
     <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
             href="./images/favicon-32x32.png"
+            rel="icon"
+            sizes="32x32"
+            type="image/png"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com" rel="preconnect"/>
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
     <link
             href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap"
             rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles.css"/>
+    <link href="styles.css" rel="stylesheet"/>
 
     <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
 <img
-        src="./images/bg-main-desktop.png"
         alt="Background image that is behind elements and multicolored"
         class="background-section"
+        src="./images/bg-main-desktop.png"
 />
 <div class="container">
     <section class="card-section">
         <div class="card-front">
             <img
-                    src="./images/bg-card-front.png"
                     alt="Front of card that is multicolored"
                     class="card-front-image"
+                    src="./images/bg-card-front.png"
             />
-            <img src="./images/card-logo.svg" alt="" class="card-front-logo"/>
+            <img alt="" class="card-front-logo" src="./images/card-logo.svg"/>
             <p class="card-front-digits">0000 0000 0000 0000</p>
             <p class="card-front-name">JANE APPLESEED</p>
-            <div class="card-front-date"><p class="card-front-date-first">00</p><p class="card-front-date-middle">/</p><p class="card-front-date-last">00</p></div>
+            <div class="card-front-date"><p class="card-front-date-first">00</p>
+                <p class="card-front-date-middle">/</p>
+                <p class="card-front-date-last">00</p></div>
         </div>
         <div class="card-back">
             <img
-                    src="./images/bg-card-back.png"
                     alt="Back of card showing 3 digit code"
                     class="card-back-image"
+                    src="./images/bg-card-back.png"
             />
             <p class="card-back-num">000</p>
         </div>
     </section>
     <section class="form-section">
-        <form id="form-information" action="index.html" method="post">
+        <form action="index.html" id="form-information" method="post">
             <div class="card-name-container">
                 <label class="card-name-label" for="card-name"
                 >CARDHOLDER NAME</label
                 >
                 <input
-                        type="text"
-                        name="card-name"
                         id="card-name"
+                        name="card-name"
                         placeholder="e.g. Jane Appleseed"
+                        type="text"
                 />
                 <div class="error-message" id="card-name-error">
                     Must enter name
@@ -72,10 +74,10 @@
                 >CARD NUMBER</label
                 >
                 <input
-                        type="tel"
-                        name="card-number"
                         id="card-number"
+                        name="card-number"
                         placeholder="e.g. 1234 5678 9123 0000"
+                        type="tel"
                 />
                 <div class="error-message" id="card-number-error">
                     Must enter a valid card number
@@ -91,12 +93,12 @@
                     <div class="form-bottom-container">
                         <div class="form-group-error">
                             <input
-                                    type="number"
-                                    name="card-exp-date-month"
                                     id="card-exp-date-month"
-                                    placeholder="MM"
-                                    min="1"
                                     max="12"
+                                    min="1"
+                                    name="card-exp-date-month"
+                                    placeholder="MM"
+                                    type="number"
                             />
                             <div class="error-message" id="card-date-error-month">
                                 Must enter month
@@ -104,12 +106,12 @@
                         </div>
                         <div class="form-group-error">
                             <label for="card-exp-date-year"></label><input
-                                type="number"
-                                name="card-exp-date-year"
                                 id="card-exp-date-year"
-                                placeholder="YY"
-                                min="20"
                                 max="35"
+                                min="20"
+                                name="card-exp-date-year"
+                                placeholder="YY"
+                                type="number"
                         />
                             <div class="error-message" id="card-date-error-year">
                                 Must enter year
@@ -120,12 +122,12 @@
                 <div class="form-cvc-container">
                     <label class="card-cvc-label" for="card-cvc">CVC</label>
                     <input
-                            type="number"
-                            name="card-cvc"
                             id="card-cvc"
-                            placeholder="e.g. 123"
-                            min="100"
                             max="999"
+                            min="100"
+                            name="card-cvc"
+                            placeholder="e.g. 123"
+                            type="number"
                     />
                     <div class="error-message" id="card-cvc-error">
                         Must enter CVC
@@ -137,24 +139,25 @@
     </section>
     <section class="completed-section">
         <img
+                alt="Blue circle with a white checkmark in it"
                 class="completed-image"
                 src="./images/icon-complete.svg"
-                alt="Blue circle with a white checkmark in it"
         />
         <div class="completed-text-container">
             <h2 class="completed-heading">THANK YOU!</h2>
             <p class="completed-message">We've added your card details</p>
         </div>
-        <button>Continue</button>
+        <button class="continue-button">Continue</button>
     </section>
 </div>
 <!-- Completed state start -->
-
-<div class="attribution">
-    Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-    >Frontend Mentor</a
-    >. Coded by <a href="#">Your Name Here</a>.
+<div class="attribution-background">
+    <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+        >. Coded by <a href="#">Saxon Crawford</a>.
+    </div>
 </div>
 <script src="./script.js"></script>
 </body>
