Changed index.html to contain a level 1 heading, as well as created one main landmark

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         class="background-section"
         src="./images/bg-main-desktop.png"
 />
-<div class="container">
+<main class="container">
     <section class="card-section">
         <div class="card-front">
             <img
@@ -38,7 +38,7 @@
                     src="./images/bg-card-front.png"
             />
             <img alt="" class="card-front-logo" src="./images/card-logo.svg"/>
-            <p class="card-front-digits">0000 0000 0000 0000</p>
+            <h1 class="card-front-digits">0000 0000 0000 0000</h1>
             <p class="card-front-name">JANE APPLESEED</p>
             <div class="card-front-date"><p class="card-front-date-first">00</p>
                 <p class="card-front-date-middle">/</p>
@@ -149,7 +149,7 @@
         </div>
         <button class="continue-button">Continue</button>
     </section>
-</div>
+</main>
 <!-- Completed state start -->
 <div class="attribution-background">
     <div class="attribution">
